force-app/main/default/objects/Clarity360SetupConfig__c/Clarity360SetupConfig__c.object-meta.xml
<CustomObject>
    <description>Subscriber editable runtime setup configuration for Clarity360.</description>
    <label>Clarity360 Setup Config</label>
    <nameField>
        <displayFormat>CFG-{0000}</displayFormat>
        <label>Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clarity360 Setup Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>