force-app/main/default/objects/Clarity360SetupConfig__c/fields/ConnectionStatus__c.field-meta.xml
<CustomField>
    <fullName>ConnectionStatus__c</fullName>
    <label>Connection Status</label>
    <description>Most recent connection test status.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>