force-app/main/default/objects/Clarity360SetupConfig__c/fields/CoverageThreshold__c.field-meta.xml
<CustomField>
    <fullName>CoverageThreshold__c</fullName>
    <description>Minimum Apex coverage threshold percentage for recommendation logic.</description>
    <label>Coverage Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>