force-app/main/default/objects/Clarity360SetupConfig__c/fields/EnableDeletionGuardrails__c.field-meta.xml
<CustomField>
    <fullName>EnableDeletionGuardrails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Deletion Guardrails</label>
    <type>Checkbox</type>
</CustomField>