force-app/main/default/objects/Clarity360SetupConfig__c/fields/EnableDependencyAnalysis__c.field-meta.xml
<CustomField>
    <fullName>EnableDependencyAnalysis__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Dependency Analysis</label>
    <type>Checkbox</type>
</CustomField>