force-app/main/default/objects/Clarity360SetupConfig__c/fields/EnableGlobalRecommendations__c.field-meta.xml
<CustomField>
    <fullName>EnableGlobalRecommendations__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Global Recommendations</label>
    <type>Checkbox</type>
</CustomField>