force-app/main/default/objects/Clarity360SetupConfig__c/fields/EnableLayoutScan__c.field-meta.xml
<CustomField>
    <fullName>EnableLayoutScan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Layout Scan</label>
    <type>Checkbox</type>
</CustomField>