force-app/main/default/objects/Clarity360SetupConfig__c/fields/EnableScheduledReports__c.field-meta.xml
<CustomField>
    <fullName>EnableScheduledReports__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether scheduled full scans should send an email report.</description>
    <inlineHelpText>Enable this only when scheduled scans are enabled and you want an email summary after each scheduled full scan.</inlineHelpText>
    <label>Enable Scheduled Reports</label>
    <type>Checkbox</type>
</CustomField>