force-app/main/default/objects/Clarity360SetupConfig__c/fields/EnableScheduledScan__c.field-meta.xml
<CustomField>
    <fullName>EnableScheduledScan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Scheduled Scan</label>
    <type>Checkbox</type>
</CustomField>