force-app/main/default/objects/Clarity360SetupConfig__c/fields/EnableUsageSampling__c.field-meta.xml
<CustomField>
    <fullName>EnableUsageSampling__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Usage Sampling</label>
    <type>Checkbox</type>
</CustomField>