force-app/main/default/objects/Clarity360SetupConfig__c/fields/ExcludedNamespaces__c.field-meta.xml
<CustomField>
    <fullName>ExcludedNamespaces__c</fullName>
    <description>Comma-separated namespaces excluded from scan scope.</description>
    <label>Excluded Namespaces</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>