force-app/main/default/objects/Clarity360SetupConfig__c/fields/ExcludedObjects__c.field-meta.xml
<CustomField>
    <fullName>ExcludedObjects__c</fullName>
    <description>Comma-separated object API names excluded from scan scope.</description>
    <label>Excluded Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>