force-app/main/default/objects/Clarity360SetupConfig__c/fields/IncludeStandardObjects__c.field-meta.xml
<CustomField>
    <fullName>IncludeStandardObjects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, selected standard objects may be scanned.</description>
    <label>Include Standard Objects</label>
    <type>Checkbox</type>
</CustomField>