force-app/main/default/objects/Clarity360SetupConfig__c/fields/IsSetupComplete__c.field-meta.xml
<CustomField>
    <fullName>IsSetupComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks whether initial setup has been completed.</description>
    <inlineHelpText>If true, setup wizard is completed for this org.</inlineHelpText>
    <label>Is Setup Complete</label>
    <type>Checkbox</type>
</CustomField>