force-app/main/default/objects/Clarity360SetupConfig__c/fields/LastSetupRunOn__c.field-meta.xml
<CustomField>
    <fullName>LastSetupRunOn__c</fullName>
    <description>Timestamp of the most recent setup completion save.</description>
    <label>Last Setup Run On</label>
    <type>DateTime</type>
</CustomField>