force-app/main/default/objects/Clarity360SetupConfig__c/fields/ScheduledReportRecipient__c.field-meta.xml
<CustomField>
    <fullName>ScheduledReportRecipient__c</fullName>
    <description>Email address that receives scheduled full scan reports.</description>
    <inlineHelpText>Email address that receives scheduled full scan reports when scheduled reporting is enabled.</inlineHelpText>
    <label>Scheduled Report Recipient</label>
    <type>Email</type>
</CustomField>