force-app/main/default/objects/Clarity360SetupConfig__c/fields/ScheduleEnabled__c.field-meta.xml
<CustomField>
    <fullName>ScheduleEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, scheduled full scans are enabled.</description>
    <label>Schedule Enabled</label>
    <type>Checkbox</type>
</CustomField>