force-app/main/default/objects/Clarity360SetupConfig__c/fields/ScheduleFrequency__c.field-meta.xml
<CustomField>
    <fullName>ScheduleFrequency__c</fullName>
    <label>Schedule Frequency</label>
    <description>Configured schedule cadence.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>