force-app/main/default/objects/Clarity360SetupConfig__c/fields/ScopeMode__c.field-meta.xml
<CustomField>
    <fullName>ScopeMode__c</fullName>
    <description>Top-level scan scope mode.</description>
    <label>Scope Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>