force-app/main/default/objects/Clarity360SetupConfig__c/fields/UseNamedCredential__c.field-meta.xml
<CustomField>
    <fullName>UseNamedCredential__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Prefer Named Credential for Tooling API calls.</description>
    <label>Use Named Credential</label>
    <type>Checkbox</type>
</CustomField>